--- a/src/main/webapp/static/css/labOprateState.css
+++ b/src/main/webapp/static/css/labOprateState.css
@@ -10,8 +10,8 @@
     display: flex;
     width: 100%;
     flex-direction: column;
-    padding: 1rem;
-    padding-top: 2.5rem;
+    padding: 1em;
+    padding-top: 2.5em;
     height: 100%;
 }
 
