--- a/src/main/webapp/static/css/orderPopup.css
+++ b/src/main/webapp/static/css/orderPopup.css
@@ -11,7 +11,6 @@ html, body {
 }
 
 body > * {
-    /*display: flex;*/
     flex-direction: column;
     background-color: #fff;
 }
@@ -35,7 +34,9 @@ li {
 a {
     text-decoration: none;
 }
-
+[v-cloak]{
+    display: none!important;
+}
 /*左侧菜单*/
 @media all {
     .left-nav {
@@ -165,10 +166,8 @@ a {
 
 .list-body>.item>header{
     flex: 1.3;
-    /*color: #777;*/
 }
 .list-body>.item>header>div {
-    /*color: #333;*/
 }
 .list-body>.item>header>h4:last-of-type{
     margin-top: .5rem;
@@ -183,9 +182,6 @@ a {
 }
 .list-body>.item>ul>li{
     position: relative;
-    /*color: #999;*/
-    /*font-size: .875em;*/
-    /*padding-top: 1em;*/
     width: 100%;
 }
 .list-body>.item>button,
@@ -211,7 +207,6 @@ a {
     content: "";
     text-align: center;
     position: absolute;
-    /*top: 0.625em;*/
     left: -1.75em;
     width: 1.25em;
     height: 1.25em;
@@ -221,26 +216,12 @@ a {
     color: #00adef;
     background-color: transparent;
 }
-.list-body>.item>ul>li:nth-of-type(1):before{
-    content: "1";
+
+.list-body>.item>ul>li:before{
+    content: counter(myCounter);
 }
-.list-body>.item>ul>li:nth-of-type(2):before{
-    content: "2";
-}
-.list-body>.item>ul>li:nth-of-type(3):before{
-    content: "3";
-}
-.list-body>.item>ul>li:nth-of-type(4):before{
-    content: "4";
-}
-.list-body>.item>ul>li:nth-of-type(5):before{
-    content: "5";
-}
-.list-body>.item>ul>li:nth-of-type(6):before{
-    content: "6";
-}
-.list-body>.item>ul>li:nth-of-type(7):before{
-    content: "7";
+.list-body>.item>ul>li{
+    counter-increment: myCounter;
 }
 .list-body>.item>ul>li.pass:before{
     content: "";
@@ -281,6 +262,7 @@ a {
     padding: .125rem .5rem;
     cursor: pointer;
 }
+
 /*曲线头部*/
 .curve{
     display: flex;
