--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -27,7 +27,7 @@
     <header>
         <span class="mainLogo"></span>
         <h1><a href="${contextPath!}/phm" target="_top">全球实验室</a></h1>
-        <h1>Haier Global Labs</h1>
+        <h1><a href="${contextPath!}/lab/full" target="_top">Haier Global Labs</a></h1>
     </header>
     <div id="container">
         <div class="left">
@@ -37,7 +37,7 @@
                     <div class="totalNum"><span><strong>5</strong>大洲</span>
                         <span><strong>18</strong>个国家</span>
                     </div>
-                    <ul>
+                        <ul>
                         <li><strong>10</strong>大研发中心</li>
                         <li><strong>23</strong>个工业园区</li>
                         <li><strong>108</strong>个工厂</li>
